--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -31,7 +31,7 @@ AR systems overlay 2D or 3D virtual objects on real scenes. Therefore, depending
 registration of the virtual and real objects in the scene which results from an accurate depth map of the surrounding environment.
 In an AR system, different techniques can be used to 
 obtain the user's location and the position of other objects in the environment.
-Tracking sensors such as gyroscope and accelerometer along with video sensors can provide information on the user's position and viewing orientation \cite{azum01}.
+Tracking sensors such as gyroscope and accelerometer along with video sensors can provide information on the user's position and viewing orientation \cite{azuma01}.
 In order to find the position of the objects in the scene, a depth map of the surrounding environment at each time is required. To obtain the depth of the 
 objects in the scene several depth sensing technologies can be used such as 3D laser scanner, depth cameras or regular cameras. However, in order to have a mobile AR
 system that is easy to carry around, the weight of the whole system will be more of a concern, hence, 
@@ -109,9 +109,9 @@ These studies show that the viewer perception of depth
 is inversely proportional to his/her distance from the object \cite{kru10,swa07,jer05,liv05}. For instance, in \cite{swa07} some experiments are designed to study and evaluate human
 perception of distance, which is the absolute depth of the objects from the observer, for an outdoor augmented reality application in urban settings. 
 However, in this research we are more interested in the human perception of relative depth in stereo vision, which is the ability to perceive and distinguish 
-the depth of different objects relative to each other. This is known as {\it Stereoscopic Acuity} or {\it Stereoacuity} 
-in binocular vision, which is the smallest depth difference between two points 
-that can be detected in binocular vision \cite{pfa2000}. More detail about
+the depth of different objects relative to each other. 
+In binocular vision, the minimum depth difference between two points 
+that can be detected in the visual system is known as {\it Stereoscopic Acuity} or {\it Stereoacuity} \cite{pfa2000}. More detail about
 this metric will be provided in the following chapters.
 We have investigated the standard stereoacuity in the human visual system and applied it to our evaluation in order to obtain the smallest detectable depth of 
 objects in human binocular vision based on their distance from the observer.
