--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -188,9 +188,9 @@ We discuss a background of the related work and concepts in Chapter 2. The geome
 stereo correspondence problem, and a survey of the stereo solutions will be reviewed. 
 Moreover, we will introduce some of the key computer vision techniques employed
 during this research work. Chapter 3 introduces some of the relevant concepts in binocular vision to this study.
-In Chapter 4, we will explain our system and its design and components in detail. Chapter 5, discusses the experiments
+In Chapter 4, we will explain our system and its design and components in detail. Chapter 5 discusses the experiments
 conducted for the evaluation of the proposed system in the framework of an outdoor AR application.
-In Chapter 6, we will discuss the shortcomings and benefits of our system in summary based on the results from Chapter 5. 
+In Chapter 6, we will discuss the shortcomings and benefits of our system based on the results from Chapter 5. 
 Consequently, a discussion of the potential aspects of improvement 
 and future research will also be provided.
 
