--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -58,7 +58,7 @@ by researchers in the field to provide a testbed for assessment of the solutions
 For instance, the Middlebury Stereo \cite{mideval} and the Kitti Stereo benchmarks \cite{kitti}
 are two of the most popular and widely used evaluation systems through which a solution can be evaluated and compared 
 to others. 
-However, both of these models take a general approach towards evaluating the methods; that is they 
+However, both of these models take a general approach towards evaluating the methods; that is, they 
 have not been designed with an eye to the particular target application. In other words, 
 they mainly focus on the fundamental aspects of designing a stereo algorithm as a solution per se to \textit{efficiently}
 find the \textit{best matches} of corresponding pixels in stereo pairs. 
@@ -129,7 +129,7 @@ However, having access to advanced technology and hardware is not always feasibl
 technologies have some limitation in their memory space and computational capability
 which may not meet the requirement for some real-time applications. 
 Therefore, we have decided to focus more on the second approach while designing our evaluation system which also looks into one of the
-key properties of an AR system mentioned earlier, that is real-time user interaction.
+key properties of an AR system mentioned earlier; that is, the real-time user interaction.
 
 One of the most important features that makes our evaluation unique and different from the others is that we have 
 designed the evaluation process of the stereo matching solutions with an eye to augmented 
