--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -136,7 +136,7 @@
 }
 
 @misc{sgbm,
-  author = {Itseez},
+  author = {Intel Corporation, Willow Garage, Itseez},
   title = {{Opencv Doc}},
   month = July,
   year = {2012},
@@ -301,7 +301,7 @@
 } 
 
 @article{dhon89,
- title={Structure from stereo - A review},
+ title={Structure from stereo - a review},
  author={Dhond, Umesh R and Aggarwal, Jake K},
  journal={Systems, Man and Cybernetics, IEEE Transactions on},
  volume={19},
