--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -133,7 +133,7 @@ A survey of the field shows that the algorithms which address stereo corresponde
 \end{enumerate}
 
 Regardless of the category, stereo matching algorithms normally include specific steps in the process of finding the corresponding pixels in the stereo images.
-According to the taxonomy by Scharstein et al. these steps are as followed:
+According to the taxonomy by Scharstein et al. these steps are as follows:
 
 \begin{enumerate}
 \item {Calculation of matching cost}
@@ -141,7 +141,6 @@ According to the taxonomy by Scharstein et al. these steps are as followed:
 \item {Disparity computation}
 \item {Disparity refinement}
 \end{enumerate}
-
 Depending on each algorithm, these steps and their sequence may change.
 
 In this section, we are going to briefly describe the important specifications of the algorithms belonging to each of these two categories.
@@ -272,7 +271,7 @@ Figure \ref{fig:gauss} shows the Gaussian filter that has been applied to the ri
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.43]{left5Gblur}
-\caption{Gaussian}
+\caption{Gaussian filter with kernel size of 5px}
 \label{fig:gauss}
 \end{figure} 
 
@@ -383,4 +382,5 @@ detected regions.
 \label{fig:edgedil}
 \end{figure} 
 
+Next chapter will describe the key concepts in the human visual system and its perception of the depth.
 
