--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -113,7 +113,7 @@ This threshold, which is defined as the minimum detectable depth between two
 objects at difference distances, is known as {\it stereoacuity} which varies in different visual systems \cite{binr83,how95}. According to standard
 stereo tests \cite{binr83}, the finest detectable disparity in the human visual system is approximately 10-15 arcseconds.
 However, a more recent study on 60 subjects \cite{garn06} at different age groups, from 17 to 83 using standard stereotests, 
-shows that the average stereoacuity for different age groups is as follows:
+shows that the average stereoacuity for different age groups is as follows: \newline
 
 \begin{minipage}{\linewidth}
 \begin{center}
