--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -121,7 +121,7 @@ shows that the average stereoacuity for different age groups is as follows: \new
 \label{tab:stAcAge}
 \begin{tabular}{ |c|c| }
 \hline
-\textbf{Age Range} & \textbf{Stereo Acuity (arcsecs)} \\ \hline
+\textbf{Age Range} & \textbf{Stereoacuity (arcsecs)} \\ \hline
 17-29 & 32 \\  \hline
 30-49 & 33.75 \\ \hline
 50-69 & 38.75 \\ \hline
@@ -130,10 +130,10 @@ shows that the average stereoacuity for different age groups is as follows: \new
 \end{center}
 \end{minipage} \newline \newline
 
-As can be seen, the stereoacuity for the the human visual system increases with the growth of the person's age; that is, 
+As can be seen, the stereoacuity for the the human visual system increases as the person gets older; that is, 
 the amount of error in the depth results 
 is less perceptible in the visual system of the elders than the younger ones.
-Using the values in equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
+Using these values in equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
 that is reported to be approximately $64$mm \cite{how95}, 
 we can estimate the threshold for minimum detectable depth
 between two objects based on their distance from the observer. \newline 
