--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -120,7 +120,7 @@ Providing real-time interaction in an AR system for the user requires the proces
 between 24fps and 
 30fps, or higher. 
 However, studies show that in practice to build a reasonable interactive augmented world the processing rate should not be less than half of the video frame rate \cite{hertz00}. 
-There are different approaches to speed up a system. Acceleration of a system is possible in two ways:
+There are different approaches to speed up a system: 
 \begin{enumerate}
 \item Using more advanced technology and hardware
 \item More sophisticated and efficient software design
