AR images added for wrong layering and chapters slightly updated

--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -130,7 +130,7 @@ shows that the average stereoacuity for different age groups is as follows: \new
 \end{center}
 \end{minipage} \newline \newline
 
-As can be seen, the stereoacuity for the the human visual system increases as the person gets older; that is, 
+As can be seen, the stereoacuity for the the human visual system increases with aging; that is, 
 the amount of error in the depth results 
 is less perceptible in the visual system of the elders than the younger ones.
 Using these values in equation \ref{eq:stac} along with the average interpupillary distance in the human visual system 
