--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -11,9 +11,49 @@
 \usepackage{array}
 \usepackage{mathtools}
 \usepackage{multirow}
+\usepackage{makeidx}
+\usepackage{longtable}
+\usepackage{listings}
+\usepackage{color}
 %\usepackage{epstopdf}
 %\numberwithin{equation}{section}
+
+%\definecolor{dkgreen}{rgb}{0,0.6,0}
+%\definecolor{gray}{rgb}{0.5,0.5,0.5}
+%\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true
+  tabsize=3
+}
+%\makeindex
 \begin{document}
+
+\pagenumbering{roman}
+
+\thesistitle
+	{A New Approach for Evaluation of Stereo Correspondence Solutions in Outdoor Applications of Augmented Reality}
+	{Baharehsadat Pourazar}
+	{Master of Sciences}
+	{Department of Computer Science}
+	{April 2014}
+
+%\include{abstract}
+%\include{ack}
+\include{contents}
+\include{figures}
 
 
 \pagenumbering{arabic}
@@ -23,7 +63,6 @@
 \include{System}
 \include{Evaluation}
 \include{Conclusion}
-
 
 \bibliographystyle{plain}
 \bibliography{reference} 
